Update `.row` css class to prevent bleed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -104,3 +104,7 @@ ul.sidebar {
   background-color: $skal-gray;
   padding-left: 10px;
 }
+
+.row {
+  margin: 0;
+}
